# ss24-gazebo-simulation-freddy

./: .gitignore  .gitmodules  README.md
freddy_gazebo/: package.xml  setup.cfg  setup.py
freddy_gazebo/config/: base_controller.yaml
freddy_gazebo/launch/: freddy_gazebo.launch.py  load_world_and_robot.launch.py
freddy_gazebo/urdf/: freddy.urdf
freddy_gazebo/worlds/: my_world.sdf
src/freddy_gazebo/: setup.py
src/freddy_gazebo/config/: bridge.yaml  freddy_controller.yaml  torso_controller.yaml
src/freddy_gazebo/freddy_gazebo/: arms_control.py  control_publisher.py  freddy_gazebo.py
src/freddy_gazebo/launch/: freddy_arm_gazebo.launch.py  freddy_gazebo.launch.py  freddy_gazebo1.launch.py  freddy_kelo_drive_gazebo.launch.py
src/freddy_gazebo/scripts/: arms_control.py
src/freddy_gazebo/worlds/: my_world.sdf
